Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ jobs:
       provider: 'azurerm'
       command: 'init'
       workingDirectory: '$(System.DefaultWorkingDirectory)/tf-files'
-      backendServiceArm: '<service-connection-auth>'
+      backendServiceArm: 'AKSSvcconn'
       backendAzureRmResourceGroupName: '$(resource_group_name)'
       backendAzureRmStorageAccountName: '$(sa_prefix)'
       backendAzureRmContainerName: '$(sa_container_name)'
@@ -65,4 +65,4 @@ jobs:
       command: 'apply'
       workingDirectory: '$(System.DefaultWorkingDirectory)/tf-files'
       commandOptions: 'tfplan'
-      environmentServiceNameAzureRM: '<service-connection-auth>'
+      environmentServiceNameAzureRM: 'AKSSvcconn'
